--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
     </div>
 <hr/>
-    <h2 class="watchlist">My Watchlist</h2>
+    <h2>My Watchlist</h2>
     <div id="watchlist">
     
     </div>
